# foxySwarm

./: CMakeLists.txt  configuration_script.sh  exit.sh  init.sh  package.xml  run.sh  tobash.sh  tozsh.sh
msg/: TrajectoryPolynomialPiece.msg
scripts/: drone_core.py  exit.sh  poseBroadcaster.py  poseSubscriber.py  run.sh  tobash  tozsh  trajectory_publisher.py
